Update personal bio

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
         <section class = "a text-light">
             <h3>About me</h3>
             <div class = "about_me">
-                <p>I am still working on understanding css. But when it comes to logic based programming I am your guy. I taught myself python and have created a scheduling program that takes in user data and assigns employyees to the needed positions based on requested number of workers per day.</p>
-                <p></p>
+                <p>When it comes to logic based programming I am your guy. I taught myself python and have created a scheduling program that takes in user data and assigns employyees to the needed positions based on requested number of workers per day. I also enjoy sifting through databases and trying to think of unique ways of using the data within.</p>
+                <p> I am a father of two and have been a manager for over 9 years at a local fast paced Forzen Custard shop called Ted Drewes. During Covid I became self motivated enough to pursue coding as career and I hope to make the transition within the next year.</p>
             </div>
         </section>
         <section>  
