Added new project

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <section class = "a text-light">
             <h3>About me</h3>
             <div class = "about_me">
-                <p>When it comes to logic based programming I am your guy. I taught myself python and have created a scheduling program that takes in user data and assigns employyees to the needed positions based on requested number of workers per day. I also enjoy sifting through databases and trying to think of unique ways of using the data within.</p>
+                <p>When it comes to logic based programming I am your guy. I taught myself python and have created a scheduling program that takes in user data and assigns employees to the needed positions based on requested number of workers per day. I also enjoy sifting through databases and trying to think of unique ways of using the data within.</p>
                 <p> I am a father of two and have been a manager for over 9 years at a local fast paced Forzen Custard shop called Ted Drewes. During Covid I became self motivated enough to pursue coding as career and I hope to make the transition within the next year.</p>
             </div>
         </section>
@@ -82,6 +82,21 @@
                 </div>
             </div>
         </div>
+
+        <div class="col-lg-4 p-3">
+            <div class="card bg-info" style ="height: 65vh">
+                <img class="card-img-top" src="./assets/images/artsell.png" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title text-center">Art Gallery</h5>
+                        <p class="card-text text-center">An E-commerce website to buy art from.</p>
+                    </div>
+                <div class="card-body text-center">
+                    <a href="https://github.com/Tylaw93/ArtSell" target="_blank" class="card-link text-light">Git repo</a>
+                    <a href="https://artsell.herokuapp.com/"  target="_blank" class="card-link text-light">Try the Site</a>
+                </div>
+            </div>
+        </div>
+    </div>
 
         
         
