Update file origin

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
         <div class="col-lg-4 p-3">
             <div class="card bg-info" style ="height: 65vh">
-                <img class="card-img-top" src="./assets/images/artsell.png" alt="Card image cap">
+                <img class="card-img-top" src="./assets/images/artsell.PNG" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title text-center">Art Gallery</h5>
                         <p class="card-text text-center">An E-commerce website to buy art from.</p>
